# OmniGuard

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  events.csv  pyproject.toml  pytest.ini  requirements.txt  run.py  urls.csv
.github/workflows/: ci.yml
app/: __init__.py  cache.py  config.py  csv_data.py  database.py  main.py  upstream.py
app/data/: users.csv
app/models/: __init__.py
app/routes/: __init__.py  entities.py  health.py
app/templates/: index.html
docs/: ARCHITECTURE.md  CAPACITY.md  DECISIONS.md  DEPLOYMENT.md  FAILURE_MODES.md  SUBMISSION_EVIDENCE.md  TROUBLESHOOTING.md
docs/benchmarks/: BOTTLENECK_ANALYSIS.md  k6-200.json  k6-50.json  k6-500.json  k6-results.md
docs/runbooks/: SIMULATED_INCIDENT_RCA.md  alert-routing-validation.md  high-5xx-error-rate.md  high-latency.md  low-cache-hit-ratio.md  redis-down.md  service-down.md
loadtest/: k6-api-load.js
nginx/: nginx.conf
observability/: alertmanager.template.yml  alertmanager.yml  prometheus.yml
observability/grafana/provisioning/dashboards/: dashboards.yml  omniguard-dashboard.json
observability/prometheus/rules/: alerts.yml
omniguard ui new/1/: code.html
omniguard ui new/2/: DESIGN.md  code.html
omniguard ui new/3/: code.html
omniguard ui new/4/: code.html
scripts/: alert_smoke_test.ps1  alert_smoke_test.sh  render-alertmanager-config.ps1
tests/: __init__.py  conftest.py  test_integration.py  test_main.py
tests/load/: baseline.js  load-test.js  stress.js
(+1 files in other folders)
