[project]
name = "mlh-pe-hackathon"
version = "0.1.0"
description = "MLH PE Hackathon Flask + Peewee + PostgreSQL template"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0.0,<4.0.0",
  "peewee>=3.17.0,<4.0.0",
  "psycopg2-binary>=2.9.0,<3.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
]

[dependency-groups]
dev = [
  "pytest>=7.4.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
